# aphra

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  aphra-diagram.md  config.example.toml  demo.py  entrypoint.sh  gradio-demo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  static.yml
aphra/: __init__.py  config.example.toml  llm_client.py  parsers.py  prompts.py  step5_user.txt  translate.py  utils.py
aphra/prompts/: step5_user.txt
aphra/tests/: test_translate.py
demo/: index.html
docs/: aphra.html  index.html  search.js
docs/aphra/: llm_client.html  parsers.html  prompts.html  translate.html
src/: step1_system.txt  step1_user.txt  step2_system.txt  step2_user.txt  step3_system.txt  step3_user.txt  step4_system.txt  step4_user.txt  step5_system.txt  step5_user.txt  translate.py  utils.py
tests/: test_context.py  test_llm_client.py  test_parsers.py  test_prompts.py  test_translate.py  test_utils.py
